--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-component-list/duraform-drawer-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-component-list/duraform-drawer-component-list.component.html
@@ -18,6 +18,7 @@
           </th>
           <th colspan="5">Drawer Size</th>
           <th rowspan="2">Note</th>
+          <th rowspan="2" style="width: 8rem">Price</th>
         </tr>
         <tr>
           <th style="width: 4rem">T</th>
@@ -55,6 +56,24 @@
           <td>{{ drawer.drawerFour }}</td>
           <td>{{ drawer.drawerFive }}</td>
           <td class="text-left">{{ drawer.note }}</td>
+          <td class="text-right">{{ drawer.price | currency }}</td>
+        </tr>
+      </tbody>
+      <tbody class="subtotal">
+        <tr>
+          <td colspan="19" class="subtotal__header">
+            <b>Subtotal</b>
+          </td>
+        </tr>
+        <tr>
+          <td class="line-number">
+            <i class="fa fa-calculator" aria-hidden="true"></i>
+          </td>
+          <td>{{ totalQuantity }}</td>
+          <td colspan="16"></td>
+          <td class="subtotal__price">
+            {{ duraformDrawers | arraySum: "price" | currency }}
+          </td>
         </tr>
       </tbody>
     </table>
