--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
@@ -31,6 +31,7 @@
           <th rowspan="2" style="width: 26rem">Option</th>
           <th rowspan="2" style="width: 20rem">Hinge Hole</th>
           <th rowspan="2">Note</th>
+          <th rowspan="2" style="width: 8rem">Price</th>
         </tr>
         <tr>
           <th style="width: 4rem">T</th>
@@ -65,6 +66,26 @@
           </td>
           <td class="text-left">
             {{ pantryDoor.note }}
+          </td>
+          <td class="text-right">
+            {{ pantryDoor.price | currency }}
+          </td>
+        </tr>
+      </tbody>
+      <tbody class="subtotal">
+        <tr>
+          <td colspan="16" class="subtotal__header">
+            <b>Subtotal</b>
+          </td>
+        </tr>
+        <tr>
+          <td class="line-number">
+            <i class="fa fa-calculator" aria-hidden="true"></i>
+          </td>
+          <td>{{ totalQuantity }}</td>
+          <td colspan="13"></td>
+          <td class="subtotal__price">
+            {{ pantryDoors | arraySum: "price" | currency }}
           </td>
         </tr>
       </tbody>
