--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
@@ -62,6 +62,37 @@ app-duraform-order-step-three {
         border-top: none;
       }
     }
+
+    .summary-box {
+      list-style: none;
+
+      li {
+        display: flex;
+        padding: 0.5rem 0;
+
+        &.summary-box__divider {
+          border-top: dotted 1px rgba($color: black, $alpha: 0.3);
+          margin: 1rem 0;
+        }
+
+        &.summary-box__total-line {
+          font-size: 1.8rem;
+        }
+      }
+
+      &__title {
+        flex: 1;
+      }
+
+      &__subtotal {
+        font-weight: bold;
+      }
+
+      &__total {
+        color: $red-primary;
+        font-weight: bold;
+      }
+    }
   }
 
   .component-box {
