--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
@@ -130,6 +130,21 @@
         }
       }
     }
+
+    .subtotal {
+      &__header {
+        border: solid 1px rgba($color: black, $alpha: 0.2);
+        color: $blue-primary;
+        font-weight: bold;
+        font-size: 1.6rem;
+        text-align: right;
+      }
+
+      &__price {
+        color: $red-primary;
+        text-align: right;
+      }
+    }
   }
 
   &__spacer {
