--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
@@ -120,6 +120,7 @@
     ></app-edge-profile-form-control>
     <td>
       <app-duraform-option-selector
+        #optionSelector
         [formGroup]="formGroup"
         [hideOptionTypeKeys]="[
           duraformOptionTypeKey.NoFaceRoute,
