--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
@@ -56,6 +56,7 @@
     ></app-edge-profile-form-control>
     <td>
       <app-duraform-option-selector
+        #optionSelector
         appRemoveTag
         [hideOptionTypeKeys]="[
           optionTypeKeyEnum.NoFaceRoute,
