--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -47,6 +47,7 @@
 @import "./3-component/duraform-price-editor";
 @import "./3-component/duraform-price-list-pdf";
 @import "./3-component/duraform-price-display-table";
+@import "./3-component/duraform-process-viewer";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
