--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/primary-left-nav/primary-left-nav.component.html
@@ -69,21 +69,43 @@
           </div>
         </a>
       </li>
-      <li class="nav__item">
+      <li class="nav__item" (click)="layoutService.toggleLeftNav(false)">
+        <a [appClassToggle]="'active'">
+          <div class="nav__item__icon text-green">
+            <i class="fa fa-cog fa-spin"></i>
+          </div>
+          <div class="nav__item__text">
+            Production
+            <ul class="nav__item__sub-menu">
+              <li>
+                <a [routerLink]="['/production/machines']">
+                  <i class="fa fa-android text-alert" aria-hidden="true"></i>
+                  Machines
+                </a>
+              </li>
+            </ul>
+          </div>
+        </a>
+      </li>
+      <li class="nav__item" (click)="layoutService.toggleLeftNav(false)">
         <a [appClassToggle]="'active'">
           <div class="nav__item__icon">
-            <i class="fa fa-cogs"></i>
+            <i class="fa fa-database" aria-hidden="true"></i>
           </div>
           <div class="nav__item__text">
             Settings
             <ul class="nav__item__sub-menu">
               <li>
                 <a [routerLink]="['/dashboard/settings/duraform-prices']">
+                  <i class="fa fa-bar-chart" aria-hidden="true"></i>
                   Duraform Prices
                 </a>
               </li>
               <li>
-                <a>Duraform Colours</a>
+                <a>
+                  <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                  Duraform Colours
+                </a>
               </li>
             </ul>
           </div>
