Finished scanning for pressing

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/delivery-docket-duraform-doors/delivery-docket-duraform-doors.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/delivery-docket-duraform-doors/delivery-docket-duraform-doors.component.html
@@ -12,7 +12,7 @@
         <th class="side">r</th>
         <th class="option">option</th>
         <th class="edge">edge profile</th>
-        <th class="hingeHole">Hinge Hole</th>
+        <th class="hinge-hole">Hinge Hole</th>
         <th class="checkbox">routed</th>
         <th class="checkbox">cleaned</th>
       </tr>
