--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/delivery-docket-pantry-doors/delivery-docket-pantry-doors.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/delivery-docket-pantry-doors/delivery-docket-pantry-doors.component.html
@@ -3,20 +3,20 @@
   <table>
     <thead>
       <tr>
-        <th style="width: 70px">qty</th>
-        <th style="width: 110px">height</th>
-        <th style="width: 110px">width</th>
-        <th style="width: 140px">CR Height</th>
-        <th style="width: 120px">CR Type</th>
-        <th style="width: 150px">CR Bottom</th>
-        <th style="text-align: center; width: 35px">t</th>
-        <th style="text-align: center; width: 35px">b</th>
-        <th style="text-align: center; width: 35px">l</th>
-        <th style="text-align: center; width: 35px">r</th>
-        <th style="padding-left: 10px">option</th>
-        <th style="padding-left: 10px; width: 190px">Hinge Hole</th>
-        <th style="padding-left: 10px; width: 100px">routed</th>
-        <th style="padding-left: 10px; width: 100px">cleaned</th>
+        <th class="qty">qty</th>
+        <th class="height">height</th>
+        <th class="width">width</th>
+        <th class="cr-height">CR Height</th>
+        <th class="cr-type">CR Type</th>
+        <th class="cr-bottom">CR Bottom</th>
+        <th class="side">t</th>
+        <th class="side">b</th>
+        <th class="side">l</th>
+        <th class="side">r</th>
+        <th class="option">option</th>
+        <th class="hinge-hole">Hinge Hole</th>
+        <th class="checkbox">routed</th>
+        <th class="checkbox">cleaned</th>
       </tr>
     </thead>
     <tbody>
