--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process-viewer.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process-viewer.scss
@@ -1,5 +1,5 @@
 .dpv {
-  background-color: white;
+  background-color: #fdffe4;
   box-shadow: 2px 2px 1rem rgba(black, 0.5);
   border: solid 1px black;
   padding: 3rem 4rem;
